syntax = "proto2";

package apollo.data.fuel;

import "cyber/proto/record.proto";

message RecordData {
  optional string path = 1;
  repeated apollo.cyber.proto.SingleMessage messages = 2;
}
